spacing fix

--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -93,7 +93,7 @@ ul.nav>li>a:hover {
 	background-color: transparent;
 }
 .head-note {
-	padding: 12% 7.5% 35%;
+	padding: 20% 7.5% 26%;
 }
 .head-note-big {
 	color: #5c5c5c;
